--- a/01_05_index.html
+++ b/01_05_index.html
@@ -8,8 +8,8 @@
 <body>
 
 <ul>
-    <li><a href="/index2.html" target="_self"><b>Главная</b></a></li>
-    <li><a href="./index_2.html">Вторая страница</a></li>
+    <li><a href="./01_05_index.html" target="_self"><b>Главная</b></a></li>
+    <li><a href="./06_10_index.html">Вторая страница</a></li>
     <li><a href="https://ru.wikipedia.org/wiki/%D0%A4%D0%B0%D0%B9%D0%BB:Fight_club.jpg" target="_blank">википедия</a></li>
     <li><a href="https://www.kinopoisk.ru/film/361/?utm_referrer=www.google.com" target="_self"><img height="20px" src="./кино.png" alt="Кино"></a></li>
     <li><a href="https://www.imdb.com/title/tt0137523/" target="_blank"><img height="20px" src="./IMDB_Logo_2016.svg" alt="IMDB"></a></li>
