--- a/06_10_index.html
+++ b/06_10_index.html
@@ -45,7 +45,7 @@
 <nav>
     <a href="#section1">Раздел 1</a>
     <a href="#section2">Раздел 2</a>
-    <a href="./index.html">Первая страница</a>
+    <a href="./01_05_index.html">Первая страница</a>
 </nav>
 
 <section id="section1">
