--- a/11_Forms.html
+++ b/11_Forms.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <h2>Отправка личных контактных данных</h2>
-    <a href="forms.html">Формы 1</a>
-    <a href="forms2.html">Формы 2</a>
+    <a href="11_Forms.html">Формы 1</a>
+    <a href="12_Froms.html">Формы 2</a>
     <form action="https://www.bing.com/search?" id="UserEnter" name="UserEnter" target="_blank">
         <label for="last_name">Фамилия:</label>
         <input type="text" id="last_name" name="last_name" required><br><br>
