--- a/02_Kirill.html
+++ b/02_Kirill.html
@@ -1,41 +1,62 @@
-<!DOCTYPE html>
-<html lang="ru">
+<!-------------------->
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Изменяем кириллицу на латиницу по клику</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 20px;
-        }
-        h2 {
-            color: #333;
-        }
-        p {
-            font-size: 18px;
-        }
-    </style>
+	<meta charset="utf-8">
+	<title>Паспорт</title>
+	<link rel="stylesheet" href="style.css">
+
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@100;200;300;400;500;600;700&family=Inter:wght@100..900;900..100&family=PT+Sans+Caption:wght@400;700&family=Poiret+One&display=swap" rel="stylesheet">
+
+<style>
+
+</style>
+
 </head>
 <body>
-<a href="01_DOM.html">Первое задание (DOM)</a>
-<a href="02_Kirill.html">Второе задание (Кириллица)</a>
-<a href="03_Решение_Алгоритмической_задачи.html">Алгоритмическая задача</a>
 
-<h2>Изменяем кириллицу на латиницу по клику</h2>
+<h1>Паспорт</h1>
+<div id="main_fon">
 
-<p>Фамилия: <span id="last-name">Юлиана</span></p>
-<p>Имя: <span id="first-name">Адамчук</span></p>
-<p>Год рождения: <span id="birth-year">2004</span></p>
+   <h5 id="pass_title" class="poiret-one-regular">РОССИЙСКАЯ ФЕДЕРАЦИЯ</h5>
+   <div id="page_top">
+   <p class="vidanstr1" id="otdel">ОТДЕЛОМ ВНУТРЕННИХ ДЕЛ</p>
+   <p class="vidanstr2" id="city">ГОР. ТЮМЕНЬ</p>
+   <p class="vidanstrcode">630-002</p>
+   <img class="podpis1" src="podpis.png">
+
+</div>
+<div id="page_bottom">
+<img class="passfoto" src="foto.jpg" alt="me" width="15%">
+<p id="familia">АДАМЧУК</p>
+<p id="name">ЮЛИАНА</p>
+<p id="fname">ДМИТРИЕВНА</p>
+<p class="pol" id="pol">ЖЕН.</p>
+<p class="hbordin">25.02.2005</p>
+<p class="hpborn1" id="city2">ГОР. ТЮМЕНЬ</p>
+<p class="hpborn2" id="oblast">ТЮМЕНСКАЯ ОБЛ.</p>
+</div>
+</div>
 
 <button onclick="changeText()">Изменить на латиницу</button>
 
 <script>
     function changeText() {
-        document.getElementById('last-name').innerText = 'Adamchuk';
-        document.getElementById('first-name').innerText = 'Juliana';
-        document.getElementById('birth-year').innerText = '2004';
+        document.getElementById('familia').innerText = 'ADAMCHUK';
+        document.getElementById('name').innerText = 'JULIANA';
+        document.getElementById('fname').innerText = 'DMITRIEVNA';
+        document.getElementById('city').innerText = 'TYUMEN';
+        document.getElementById('city2').innerText = 'TYUMEN';
+        document.getElementById('pol').innerText = 'WOMAN.';
+        document.getElementById('oblast').innerText = 'TYUMEN OBLAST.';
+        document.getElementById('otdel').innerText = 'INNER CASES.';
+        document.getElementById('pass_title').innerText = 'RUSSIAN FEDERATION';
+
     }
 </script>
 
+</script>
 </body>
 </html>
+
