--- a/12_Froms.html
+++ b/12_Froms.html
@@ -6,8 +6,8 @@
 </head>
 <body>
     <h2>Отправка данных заказа</h2>
-    <a href="forms.html">Формы 1</a>
-    <a href="forms2.html">Формы 2</a>
+    <a href="11_Forms.html">Формы 1</a>
+    <a href="12_Froms.html">Формы 2</a>
     <form action="https://www.bing.com/search?" id="UserEnter" name="UserEnter" target="_blank">
         <label for="item_name">Название товара:</label>
         <input type="text" id="item_name" name="item_name" required><br><br>
